<resources>
    <string name="app_name">CoffeeTruckFinalProject11</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="name">NAME</string>
    <string name="save">SAVE</string>
    <string name="cancle">CANCLE</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Don\'t have an account? Please click here!</string>
    <string name="login">Login</string>
    <string name="error">Error!</string>
    <string name="create">Create</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
</resources>